* Add native image support with GraalVM
* Introduce CLI CSV export support